--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,8 @@
 
 Socialization is a Ruby Gem that allows any model to Follow and/or Like any other model. This is accomplished through a double polymorphic relationship on the Follow and Like models. But you don't need to know that since all the complexity is hidden from you.
 
+{<img src="https://secure.travis-ci.org/cmer/socialization.png" />}[http://travis-ci.org/cmer/socialization]
+
 == Installation
 
 === Rails 3 Support
