--- a/README.rdoc
+++ b/README.rdoc
@@ -155,6 +155,19 @@ All mentionners
 
 ---
 
+== Demo App
+
+For your convenience, I have added a demo app in demo/demo_app. It does not have a web UI, but you can play with Socialization in the Rails console. It should also help you figure out hown to use Socialization in the Real World.
+
+To use the demo app:
+
+  $ cd demo/demo_app
+  $ bundle
+  $ rake db:migrate
+  $ rake db:seed
+  $ rails console
+
+
 == Note on Patches/Pull Requests
 
 * Fork the project.
